# ssd-llm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: inference_bench.rs
src/: benchmark.rs  config.rs  main.rs
src/api/: metrics.rs  mod.rs  ollama_manage.rs  openai.rs  server.rs
src/inference/: attention.rs  awq.rs  batch_scheduler.rs  chat.rs  chat_template.rs  feed_forward.rs  flash_attention.rs  gqa.rs  grammar.rs  h2o_cache.rs  json_mode.rs  kv_cache.rs  lora.rs  mmap_kv_cache.rs  mod.rs  moe.rs  paged_attention.rs  perplexity.rs  prompt_cache.rs  quantized_kv_cache.rs  rope_scaling.rs  sampler.rs  sliding_window.rs  speculative.rs  tensor_parallel.rs  tokenizer.rs  tool_use.rs  transformer.rs  vision.rs
src/metal/: compute.rs  gpu.rs  mod.rs  neon.rs
src/metal/shaders/: kernels.metal  matmul.metal  moe_gate.metal  rmsnorm.metal  rope.metal  softmax.metal  vision_patch_embed.metal
src/model/: cache.rs  gguf.rs  loader.rs  mod.rs
src/pull/: mod.rs
src/ssd/: block_swap.rs  memory_pressure.rs  mmap_pool.rs  mod.rs  prefetch.rs  streamer.rs
