[package]
name = "ssd-llm"
version = "0.1.0"
edition = "2021"
description = "Run 70B+ LLMs on Apple Silicon by using SSD as extended memory"
license = "MIT"
repository = "https://github.com/redbasecap-buiss/ssd-llm"
keywords = ["llm", "apple-silicon", "inference", "ssd", "mmap"]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "ssd-llm"
path = "src/main.rs"

[dependencies]
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
byteorder = "1.5"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
half = "2"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
