[package]
name = "ssd-llm"
version = "1.0.0"
edition = "2021"
description = "Run 70B+ LLMs on Apple Silicon by using SSD as extended memory"
license = "MIT"
repository = "https://github.com/redbasecap-buiss/ssd-llm"
keywords = ["llm", "apple-silicon", "inference", "ssd", "mmap"]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "ssd-llm"
path = "src/main.rs"

[dependencies]
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
byteorder = "1.5"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
half = "2"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
objc = "0.2"
block = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "inference_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
